json to object added

--- a/Terraform - workflow.ipynb
+++ b/Terraform - workflow.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 136,
    "id": "3f7ab13b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 137,
    "id": "18cf768f",
    "metadata": {},
    "outputs": [],
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "ba4c5cc3",
+   "execution_count": 138,
+   "id": "4f59ac27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "51684bf7",
+   "execution_count": 139,
+   "id": "9113eb96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "39fbe4ed",
+   "execution_count": 140,
+   "id": "976a2f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "99091ba3",
+   "execution_count": 141,
+   "id": "a484e090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "f2eccbb0",
+   "execution_count": 251,
+   "id": "15188ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,29 +180,29 @@
     "        Takes schemas object, returns json object\n",
     "        \"\"\"\n",
     "        parent = self.schema[\"provider_schemas\"][f\"registry.terraform.io/hashicorp/{self.provider}\"] \\\n",
-    "            [\"resource_schemas\"][resource][\"block\"]\n",
+    "            [\"resource_schemas\"][resource]\n",
     "        return parent\n",
     "    \n",
-    "    def get_block(self, resource_object):\n",
+    "    def get_block(self, resource):\n",
     "        \"\"\" \n",
     "        Takes json object, returns json objects\n",
     "        \"\"\"\n",
-    "        block = resource_object[\"block\"]\n",
-    "    \n",
+    "        block = resource.get(\"block\")\n",
+    "        return block\n",
+    "   \n",
     "    def expand_block(self, resource_object):\n",
     "        \"\"\" \n",
     "        Takes json object, returns json attributes and \n",
     "        block_type objects if exist\n",
     "        \"\"\"\n",
-    "        obj = self.get_block(resource_object)\n",
-    "        attributes = obj.get(\"attributes\")\n",
-    "        block_types = obj.get(\"block_types\")\n",
+    "        attributes = resource_object.get(\"attributes\")\n",
+    "        block_types = resource_object.get(\"block_types\")\n",
     "        return attributes, block_types"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d53fafb2",
+   "id": "fb5782d3",
    "metadata": {},
    "source": [
     "## 1. Create terrafrom file with schema"
@@ -210,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "01fdb014",
+   "execution_count": 252,
+   "id": "f0c76938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01aff47",
+   "id": "8a3a384c",
    "metadata": {},
    "source": [
     "## 2. Initialize Handler"
@@ -228,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "8deaceca",
+   "execution_count": 253,
+   "id": "8808d9cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b38645",
+   "id": "6e9e5dd2",
    "metadata": {},
    "source": [
     "## 3. Print resources"
@@ -246,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "c2db1fcd",
+   "execution_count": 254,
+   "id": "57dcd5e1",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        " 'kubernetes_validating_webhook_configuration']"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,19 +300,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "9ce34629",
+   "cell_type": "markdown",
+   "id": "5063ccae",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "resource = \"kubernetes_service\""
+    "## 4. [Optional] load json into object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "f7a5d5c2",
+   "execution_count": 271,
+   "id": "ab98d60e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resource = \"kubernetes_pod\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "id": "0b6a1ced",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +329,7 @@
        "['attributes', 'block_types', 'description_kind']"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,78 +340,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "84faedc8",
+   "execution_count": 273,
+   "id": "8381baea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['metadata', 'spec', 'timeouts']"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k8s.show_block_types(resource)"
+    "obj_01 = k8s.get_parent(resource)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "724624f9",
+   "execution_count": 274,
+   "id": "bad26768",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['annotations',\n",
-       " 'generate_name',\n",
-       " 'generation',\n",
-       " 'labels',\n",
-       " 'name',\n",
-       " 'namespace',\n",
-       " 'resource_version',\n",
-       " 'uid']"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k8s.show_metadata_attrs(resource)"
+    "data = json.dumps(obj_01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "c406ea0f",
+   "execution_count": 275,
+   "id": "f1a05788",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj_01 = json.loads(data, object_hook=lambda d: SimpleNamespace(**d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "id": "5f381281",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['port']"
+       "'string'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k8s.show_spec_block_types(resource)"
+    "obj_01.block.block_types.metadata.block.attributes.name.type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "id": "3a73ad94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_01.block.block_types.metadata.block.attributes.name.optional"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3217055",
+   "id": "b41b72a0",
    "metadata": {},
    "outputs": [],
    "source": []
